Doker-compose bug fixes